--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "peerDependencies": {
     "@apollo/client": "^3.2.3",
-    "@sentry/browser": "^7.0.0",
+    "@sentry/core": "^7.0.0",
     "graphql": "15 - 16"
   },
   "devDependencies": {
